// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubHeadline should render as h2 element 1`] = `
.circuit-0 {
  text-transform: uppercase;
  font-weight: 700;
  font-size: 14px;
  line-height: 14px;
  margin-bottom: 12px;
  color: #000;
}

<h2
  class="circuit-0"
>
  h2 subheading
</h2>
`;

exports[`SubHeadline should render as h3 element 1`] = `
.circuit-0 {
  text-transform: uppercase;
  font-weight: 700;
  font-size: 14px;
  line-height: 14px;
  margin-bottom: 12px;
  color: #000;
}

<h3
  class="circuit-0"
>
  h3 subheading
</h3>
`;

exports[`SubHeadline should render as h4 element 1`] = `
.circuit-0 {
  text-transform: uppercase;
  font-weight: 700;
  font-size: 14px;
  line-height: 14px;
  margin-bottom: 12px;
  color: #000;
}

<h4
  class="circuit-0"
>
  h4 subheading
</h4>
`;

exports[`SubHeadline should render as h5 element 1`] = `
.circuit-0 {
  text-transform: uppercase;
  font-weight: 700;
  font-size: 14px;
  line-height: 14px;
  margin-bottom: 12px;
  color: #000;
}

<h5
  class="circuit-0"
>
  h5 subheading
</h5>
`;

exports[`SubHeadline should render as h6 element 1`] = `
.circuit-0 {
  text-transform: uppercase;
  font-weight: 700;
  font-size: 14px;
  line-height: 14px;
  margin-bottom: 12px;
  color: #000;
}

<h6
  class="circuit-0"
>
  h6 subheading
</h6>
`;

exports[`SubHeadline should render with no margin styles when passed the noMargin prop 1`] = `
.circuit-0 {
  text-transform: uppercase;
  font-weight: 700;
  font-size: 14px;
  line-height: 14px;
  margin-bottom: 12px;
  color: #000;
  margin-bottom: 0;
}

<h3
  class="circuit-0"
/>
`;
